# libpipe

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  arity.h  defines.h  fultz.cc  libpipe.h  pipe.cc  tests.cc
doc/: README.md
doc/examples/: README.md  my_example.cc
include/: arity.h  defines.h  first_arg.h  libpipe.h  pipe.h
tests/: CMakeLists.txt  main.cc
